2011-08-31 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyFilter.pm: Created dummy ProxyFilter lib
	* central_proxy/proxy_selectors.cfg: Firt version of proxy selector conf file 
	* central_proxy/central_proxy.pl: Added support for ProxyFilter and ProxySelector libs
	* central_proxy/central_proxy.cfg: Added new parameter for proxy selector conf files.
	* central_proxy/ProxySelector.pm: Created dummy ProxySelector lib

2011-08-30 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Modified central_proxy to support request
	logging.
	* central_proxy/RequestLog.pm: First version of request log file.
	* central_proxy/central_proxy.cfg: Added REQUESTS_LOG parameter to conf
	file.

2011-07-21 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyLib.pm: Fixed a bind error when central server is restarting.

2011-06-20 Sancho Lerena <slerena@artica.es>

    * central_preoxy.pl,
    ProxyLib.pm: Fixed small problems on header.

2011-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	*satellite_proxy/cfg.php,
	satellite_proxy/lib.php,
	satellite_proxy/satellite_proxy.php,
	central_proxy/central_proxy.pl,
	central_proxy/ProxyLib.pm: Files header added, also license and credits
	of HTTPTunnel by Sebastian Weber (http://http-tunnel.sourceforge.net/)

2011-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* satellite_proxy/cfg.php,
	satellite_proxy/lib.php,
	satellite_proxy/satellite_proxy.php,
	central_proxy/central_proxy.pl,
	central_proxy/ProxyLib.pm,
	central_proxy/central_proxy.cfg: First version of files, it is a minimal
	prototype with all functionality.

2011-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* ChangeLog: First version of file.
	* central_proxy, satellite_proxy: Created folder structure.