@@ -1,3 +1,10 @@
+2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* central_proxy/ProxyConfig.pm: Created config lib.
+	* central_proxy/central_proxy.pl: Moved config functions from ProxyLib
+	to ProxyConfig.
+	* central_proxy/ProxyLib.pm: Deleted some functions related to configuration.
+
 2011-08-31 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* central_proxy/ProxyFilter.pm: Created dummy ProxyFilter lib
